--- a/WebProxy/httpd-proxy.conf
+++ b/WebProxy/httpd-proxy.conf
@@ -2,7 +2,7 @@
 # Implements a proxy/gateway for Apache.
 # # Required modules: mod_proxy, mod_proxy_http
 #
-
+Listen 0.0.0.0:80
 # Set up Proxy Configuration
 <IfModule mod_proxy.c>
   # Enable Proxy Requests
@@ -11,19 +11,18 @@
   #===IP CONFIG===#
   <Proxy *>
 
-    Allow from all
-    #Order deny,allow
-    #Deny from all
-    #Allow from 127.0.0.1
-    #Allow from ::1
+    Order deny,allow
+    Deny from all
 
+    Allow from 127.0.0.1
   </Proxy>
+
+</IfModule>
 
   #===BLOCK ALL ACCESS TO SPECIFIED DOMAINS===#
 
-  ProxyBlock .wikipedia.org
-  ProxyBlock .facebook.com
-  ProxyBlock .x.com
-  ProxyBlock .youtube.com
-
-</IfModule>
+  ProxyBlock .wikipedia.
+  ProxyBlock .facebook.
+  ProxyBlock .x.
+  ProxyBlock .youtube.
+  ProxyBlock .gamestop.
